examples/datalog/18_advanced_patterns/129_first_value.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_first
Knowledge graph 'test_first' created.
Switched to knowledge graph: test_first
> .kg use test_first
Switched to knowledge graph: test_first
> +data[(1, 100), (2, 200), (3, 150)].
Inserted 3 fact(s) into 'data'.
> +first_val(<MIN:Id>, Val) :- data(Id, Val), data(MinId, _), Id = MinId.
Script error: Parse error: Invalid term: '<MIN:Id>'
