examples/datalog/18_advanced_patterns/129_first_value.dl
% Test: First value simulation
% Expected: Get first value by order
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_first
.kg use test_first

+data[(1, 100), (2, 200), (3, 150)].

% Minimum id's value (first)
+first_val(<MIN:Id>, Val) :- data(Id, Val), data(MinId, _), Id = MinId.

% Simpler: just get min id
+min_id(<MIN:Id>) :- data(Id, _).

?- min_id(M).

.kg use default
.kg drop test_first
